crates/gossamer-diagnostics/tests/snapshots/GP0033.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0033]: A triple-quoted string spanning several lines carried text on the - here
--- framed ---
error[GP0033]: A triple-quoted string spanning several lines carried text on the
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
