crates/gossamer-diagnostics/tests/snapshots/GP0036.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0036]: A struct literal wrote more than one `..base` functional update. Keep a - here
--- framed ---
error[GP0036]: A struct literal wrote more than one `..base` functional update. Keep a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
