crates/gossamer-diagnostics/tests/snapshots/GP0037.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0037]: A `let` whose pattern can fail to match was written without an `else` - here
--- framed ---
error[GP0037]: A `let` whose pattern can fail to match was written without an `else`
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
