crates/gossamer-diagnostics/tests/snapshots/GP0039.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0039]: A serde turbofish named a type typed serde does not cover. - here
--- framed ---
error[GP0039]: A serde turbofish named a type typed serde does not cover.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
