crates/gossamer-diagnostics/tests/snapshots/GP0040.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0040]: A `use` path was written with the hyphens a package name may carry. - here
--- framed ---
error[GP0040]: A `use` path was written with the hyphens a package name may carry.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
