crates/gossamer-diagnostics/tests/snapshots/GP0041.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0041]: A `|>` step wrote its own arguments, so the piped value has no slot - here
--- framed ---
error[GP0041]: A `|>` step wrote its own arguments, so the piped value has no slot
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
