crates/gossamer-diagnostics/tests/snapshots/GP0042.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GP0042]: A binding or an assignment wrote its targets as a parenthesised - here
--- framed ---
error[GP0042]: A binding or an assignment wrote its targets as a parenthesised
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
